# Learning-Python

./: # change this code.py  BMI calculator.py  BMI_calculator(1).py  BMI_calculator.py  Conditions.py  Formatting.py  Functions.py  Good first program.py  Lists.py  Loops.py  Numbers.py  RSA decryptor.py  RSA4096.py  bmi_calculator_function.py  chat_bot.py  decorator.py  dice_from_koans.py  do_while.cpp  dot_product.py  exam.py  exam_2.py  first_ex.py  foo.txt  guess_my_number.py  how_old_are_you.py  identity_matrix.py  labirinth_directions.py  labirinth_directions1.py  labirinth_generator.py  labirinth_new.py  labyrinth.py  learning_pull_request.py  letter_to_yourself.py  letter_to_yourself1.py  letter_to_yourself2.py  list_training.py  matrices.py  matrix_introduction.py  matrix_multiplication.py  mission.txt  (+19 more)
Calculator/: calcul.py  calculator.py  dict.py  infix_expression.py  polish_notation.py  test_calcualtor.py  test_calculator.py
Messanger/: main.py
class_sample/: antenna.py  car.py  tv_sample_object.py
homework/: 2021-09-21.py  2022-10-12.py  2022_08_24.py  2022_08_27.py  2022_08_31.py  2022_08_31_overdue.py  2022_09_14.py  2022_10_05.py  prisma.py
homework/signal_ticket/: ambulance_employee.txt  ambulance_operator.py  doctor.py  doctor.txt  pyproject.toml  test.py  ticket.py  ticket.txt
labirinth/: clases_enemy_quest.py  labirinth_directions.py  plan.txt  test_dialog.py  test_enemy.py  test_inventory.py  test_player.py  test_vertex.py  vertex.py
programming_by_doing/: how__old_are_you.py  little_quiz.py  quest.py  quiz.py  task_24.py  task_26.py  (+20 more)
(+31 files in other folders)
